<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/login_title_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp"
        android:scaleType="fitXY"
        android:src="@drawable/top_settings_img" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/sys_ref_settings"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <!-- 功率设置 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:background="@color/white" >

        <!-- 功率 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/power"
            android:textSize="20sp" />
        <!-- 减 -->

        <ImageView
            android:id="@+id/power_minus_id"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/desc_powerminus_str"
            android:src="@drawable/power_minus" />

        <!-- 功率文本框 -->

        <EditText
            android:id="@+id/power_data_id"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:background="@android:drawable/edit_text"
            android:cursorVisible="false"
            android:editable="false"
            android:gravity="center"
            android:hint="26"
            android:textColor="@color/darkgray"
            android:textSize="18sp" />
        <!-- 默认是不显示全边框的，添加上面的background中的属性之后才能显示 -->


        <!-- 加 -->

        <ImageView
            android:id="@+id/power_plus_id"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/desc_powerplus_str"
            android:src="@drawable/power_plus" />
    </LinearLayout>

    <!-- 服务器地址设置 -->
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="50dp"
	    android:orientation="horizontal">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/server_url"
	        android:layout_marginLeft="20dp"
	        android:textSize="20dp"/>
	    <EditText 
	        android:layout_width="170dp"
	        android:layout_height="wrap_content"
	        
	        android:text=""/>
	</LinearLayout>

	
	  <Button
        android:id="@+id/movementUP"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/goldenrod"
        android:clickable="true"
        android:text="手动上传"
        android:textColor="@color/white"
        android:textSize="20sp" />
	
    <!-- 确认按钮 -->

    <Button
        android:id="@+id/makesure_id"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/goldenrod"
        android:clickable="true"
        android:text="@string/makesure"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>